--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.Isa</groupId>
-    <artifactId>world</artifactId>
+    <artifactId>worldNavigator</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
