--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
             <artifactId>jsp-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>3.0.20100224</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
