--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.googlecode.json-simple</groupId>
+                <artifactId>json-simple</artifactId>
+                <version>1.1.1</version>
+                <optional>true</optional>
+            </dependency>
+
+            <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
                 <version>2.5</version>
