start of preparing database

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,21 @@
             <artifactId>servlet-api</artifactId>
             <version>3.0.20100224</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-legacy</artifactId>
+            <version>4.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-core</artifactId>
+            <version>4.0.5</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
